deploy/devops-wordpress/devops-wordpress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: devops-wordpress-deployment
  namespace: ks-devops-test
  labels:
    app: devopstest
    container: devops-wordpress
    group: devopstest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devopstest
      container: devops-wordpress
      group: devopstest
  template:
    metadata:
      labels:
        app: devopstest
        container: devops-wordpress
        group: devopstest
    spec:
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: devops-wordpress-pvc
      containers:
        - name: wordpress-jay8ao
          image: wordpress:4.8-apache
          ports:
            - name: tcp-80
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1000Mi
            requests:
              cpu: 10m
              memory: 10Mi
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
